# Django-inline-column-extension

./: README.md  pyproject.toml
example/example/: settings.py
example/inlineadmin/: admin.py  apps.py  models.py
example/inlineadmin/migrations/: 0001_initial.py
inline_admin_extensions/: admin.py
inline_admin_extensions/templates/admin3/edit_inline/: tabular.html  tabular_header_row.html  tabular_paginated.html
inline_admin_extensions/templatetags/: inline_admin_paginator.py
