[project]
name = "Django-inline-column-extension"
version = "1.0"
authors = [
  { name="navid shaghouzaei", email="navid.shagho003@gmail.com" },
]
description = "With this package you can paginate and sort inline admin"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django >= 2.2",
]

[project.urls]
Homepage = "https://github.com/shagho/Django-inline-column-extension"
Issues = "https://github.com/shagho/Django-inline-column-extension/issues"

[tool.setuptools.packages.find]
include = ["inline_admin_extensions*"]
exclude = ["pics"]  

[tool.setuptools.package-data]
"*" = ["*.*"] # <-- this changed

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"